24-08-2010 Kristopher Wilson <kristopherwilson@gmail.com>
released version 0.13

23-08-2010 Kristopher Wilson <kristopherwilson@gmail.com>
fixed fullscreen functionality bugs
added --version action
merged widthpercent and heightpercent into width and height options, respectively
updated man page and --info and --help actions

17-08-2010 Kristopher Wilson <kristopherwilson@gmail.com>
released version 0.12
added ability to drag and drop tabs for sorting
added ability to specify width and height as a percentage (thomas.jost)
added character selection string for better highlighting
fixed behavior issue when typing exit (thomas.jost)
added tab hotkey feature (thomas.jost)
added keyboard copy and paste functionality (andfagiani)
added clickable link functionality

09-10-2007 Markus Gross <xsdnyd@gmail.com>
fixed --toggle (again)

08-10-2007 Markus Gross <xsdnyd@gmail.com>
added fullscreen keyboard shortcut and popupmenu item
fixed --toggle option
fixed weird characters appearing when using shortcuts
updated manpage

07-10-2007 Markus Gross <xsdnyd@gmail.com>
added scroll on output option
added background image option

03-09-2007 Markus Gross <xsdnyd@gmail.com>
added "autohide" option, this enables/disables the hiding of stjerm when it looses focus

01-09-2007 Markus Gross <xsdnyd@gmail.com>
bumped up version to 0.10
added english manpage
added "keymod" option to set the modifiers for keyboard shortcuts
small code cleanups

31-08-2007 Markus Gross <xsdnyd@gmail.com>
added tinting of background image with background color
added "allowbold" option to enable/disable bold fonts
added "tabfill" option to let tabs fill up all space
added intelligent boolean value parsing (now "yes", "1" and "true" 
      evalute to TRUE, and opposites evaluate to FALSE)

17-08-2007 Markus Gross <xsdnyd@gmail.com>
added --info to display .Xdefaults options
renamed -tablabel to -tl
renamed -showtab to -st

16-08-2007 Markus Gross <xsdnyd@gmail.com>
added autotools build system